--- a/.env.testing
+++ b/.env.testing
@@ -21,5 +21,5 @@ USDC_ON_ETH=0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48
 USDC_ON_GNO=0xDDAfbb505ad214D7b80b1f830fcCc89B60fb7A83
 USDCE_MASTER_MINTER=0x55715Acb53a53332Fc2EBEC4a4ce50ab6086C4E0
 
-ETH_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/re7649E3pqC5NQqe34D3-EzaqdKeubrx
-GNO_RPC_URL=https://rpc.ankr.com/gnosis
+ETH_RPC_URL=
+GNO_RPC_URL=
